--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+*{
+    font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100vh;
+    margin: 250px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+    /* top: 50%;
+    left:50%; */
+    /* position: absolute; */
+    width: 250px;
+    margin: 0 auto;
+    text-align: center;
+    border: 5px solid black;
+    border-radius: 5px;
+    background: khaki;
+    padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.keypad{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(60px, auto);
+    padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+input[type="text"]{
+    height: 75px;
+    width: 230px;
+    background-color: khaki;
+    border: 1px solid black;
+    color: #fff;
+    text-align: right;
+    font-size: 25px;
+    font-weight: 900;
+    letter-spacing: 1px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#clear{
+    grid-column: 1/3;
+    grid-row: 1;
+    color: #000;
+}
+
+#result{
+    grid-column: 3/5;
+    grid-row: 5;
+    color: #000;
+}
+
+button{
+    margin: 2px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active{
+    outline: none;
+}
+
+.highlight{
+    background: lawngreen;
 }
