--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
 }
 
 body{
-    background-color: bisque;
+    background-color: #a2d5c6;
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 100vh;
-    margin: 250px;
+    margin-top: 100px;
+    /* margin: 250px; */
 }
 
 .container{
@@ -20,7 +21,7 @@ body{
     text-align: center;
     border: 5px solid black;
     border-radius: 5px;
-    background: khaki;
+    background: #3b4d61;
     padding: 5px;
 }
 
@@ -34,14 +35,14 @@ body{
 input[type="text"]{
     height: 75px;
     width: 230px;
-    background-color: khaki;
+    background-color: white;
     border: 1px solid black;
-    color: #fff;
+    color: #000;
     text-align: right;
     font-size: 25px;
     font-weight: 900;
     letter-spacing: 1px;
-
+    border-radius: 5px;
 }
 
 #clear{
@@ -72,5 +73,5 @@ button:active{
 }
 
 .highlight{
-    background: lawngreen;
+    background: #077b8a;
 }
